--- a/app/views/messages/list.html.erb
+++ b/app/views/messages/list.html.erb
@@ -42,7 +42,7 @@
     <td><%= m.created_at -%></td>
     <td>
       <%= link_to "查看", {:action => "show", :id => m.id}, :target => "_blank" -%>&nbsp;&nbsp;
-      <a href="javascript:if(confirm('确实要删除吗?'))location='delete.php?id=<%= m.id -%>'">删除</a>
+      <a href="javascript:if(confirm('确实要删除吗?'))location='destroy.php?id=<%= m.id -%>'">删除</a>
     </td>
   </tr>
   <% end -%>
