some little modify and recruitment page

--- a/app/views/main/about_us.html.erb
+++ b/app/views/main/about_us.html.erb
@@ -51,7 +51,7 @@
       </h3><br/>
       <%= html_blank(7) -%>南昌思创工程技术有限公司由原中国瑞林设计研究院的专业技术人员合作始创于1997年10月，
       是专业从事工业自动化、建筑智能化系统集成与服务的高科技企业。<br/>
-      <%= html_blank(7) -%>今天，思创工程以不断创造客户价值为追求目标，密切关注和了解客户的需求和行业发展的趋势，
+      <%= html_blank(7) -%>今天，思创工程以不断创造客户价值为追求目标，密切关注与了解客户的需求和行业发展的趋势，
       已为众多行业领域的客户提供了建设与服务全过程一站式的解决方案。<br/>
       <%= html_blank(7) -%>未来，思创工程将始终秉承“以客户为中心”的管理思想，
       一直奉行“更密切、更快捷、更高效、更全面、更专业”的服务理念，致力于与您合作共赢！<br/>
