--- a/app/views/main/services.html.erb
+++ b/app/views/main/services.html.erb
@@ -1,6 +1,6 @@
 <div class="conten_heading">
   <div class="page_heading">
-    我们的服务触及每一个行业和业务流程
+    我们的服务触及每一个行业及其业务流程
   </div>
   <div class="breadcrumb">
     <a href="index.php">首页</a>&nbsp;/&nbsp;公司业务
