--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -118,15 +118,15 @@
             </div>
         <% end -%>
       </div>
-      <div class="footer_form_text"><span class="footer_text_highlight">Stay in touch</span><br/>
+      <div class="footer_form_text"><span class="footer_text_highlight">给我们留言</span><br/>
         <a href="mailto:strong@gmail.com">strong@gmail.com</a><br/>
         P: 0791-8810 3293 | F: 0791-8812 2836
       </div>
     </div>
     <div class="footer_social_icons">
       <ul id="footer_social_icons">
-        <li id="facebook"><a href="http://www.facebook.com/syxersolutions" target="_blank">Facebook</a></li>
-        <li id="twitter"><a href="http://www.twitter.com/syxersolutions" target="_blank">Twitter</a></li>
+        <li id="facebook"><a href="http://weibo.com/ncstrong" target="_blank">Facebook</a></li>
+        <li id="twitter"><a href="http://t.qq.com/ncstrong" target="_blank">Twitter</a></li>
         <li id="rss"><a href="http://au.linkedin.com/in/syxer" target="_blank">LinkedIn</a></li>
         <li id="bookmark"><a href="http://www.addthis.com/bookmark.php" class="addthis_button">Bookmark</a>
           <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
