--- a/app/views/main/about_us.html.erb
+++ b/app/views/main/about_us.html.erb
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="/jquery/js/rotator.js"></script>
+<!--<script type="text/javascript" src="/jquery/js/rotator.js"></script>-->
 <div class="conten_heading">
   <div class="page_heading">
     我们有不平凡的团队
@@ -14,12 +14,12 @@
         <ul>
           <li class="show" style="opacity: 1;">
             <img src="/images/culture1.jpg" alt="Our Culture" width="902" height="298"></li>
-          <li style="opacity: 0;" class=""><img src="/images/culture2.jpg" alt="Our Culture" width="902" height="298">
-          </li>
-          <li style="opacity: 0;" class=""><img src="/images/culture3.jpg" alt="Our Culture" width="902" height="298">
-          </li>
-          <li style="opacity: 0;" class=""><img src="/images/culture4.jpg" alt="Our Culture" width="902" height="298">
-          </li>
+          <!--<li style="opacity: 0;" class=""><img src="/images/culture2.jpg" alt="Our Culture" width="902" height="298">-->
+          <!--</li>-->
+          <!--<li style="opacity: 0;" class=""><img src="/images/culture3.jpg" alt="Our Culture" width="902" height="298">-->
+          <!--</li>-->
+          <!--<li style="opacity: 0;" class=""><img src="/images/culture4.jpg" alt="Our Culture" width="902" height="298">-->
+          <!--</li>-->
         </ul>
       </div>
     </div>
