首页及公司业务页面修改

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
 <body>
 <div id="wrapper">
   <div class="logo">
-    <a href="/index.php">
+    <a href="/">
       <img src="/images/logo.png" alt="南昌思创工程技术有限公司" width="363" height="55" border="0" title="南昌思创工程技术有限公司"/>
     </a>
   </div>
@@ -123,22 +123,7 @@
         P: 0791-8810 3293 | F: 0791-8812 2836
       </div>
     </div>
-    <div class="footer_social_icons">
-      <ul id="footer_social_icons">
-        <li id="facebook"><a href="http://www.facebook.com/syxersolutions" target="_blank">Facebook</a></li>
-        <li id="twitter"><a href="http://www.twitter.com/syxersolutions" target="_blank">Twitter</a></li>
-        <li id="rss"><a href="http://au.linkedin.com/in/syxer" target="_blank">LinkedIn</a></li>
-        <li id="bookmark"><a href="http://www.addthis.com/bookmark.php" class="addthis_button">Bookmark</a>
-          <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
-          <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4d6a738d49291842"></script>
-        </li>
-      </ul>
-    </div>
   </div>
 </div>
 </body>
 </html>
-
-<!-- Hosting24 Analytics Code -->
-<!--<script type="text/javascript" src="http://stats.hosting24.com/count.php"></script>-->
-<!-- End Of Analytics Code -->
