模板内容修改

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -122,6 +122,13 @@
         P: 0791-8810 3293 | F: 0791-8812 2836
       </div>
     </div>
+    <div class="footer_social_icons">
+      <dl>
+        <dd>南昌思创工程技术有限公司 版权所有</dd>
+        <dd>Copyright &copy; <%= Time.now.year -%>, Strong Co.ltd, All Rights Reserved</dd>
+      </dl>
+
+    </div>
   </div>
 </div>
 </body>
