--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,34 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <!-- MOBIFY - DO NOT ALTER - PASTE IMMEDIATELY AFTER OPENING HEAD TAG -->
-  <% if params[:action] == "index" -%>
-      <script type="text/javascript">/*<![CDATA[*/
-      (function (a) {
-          function b(a, b) {
-              if (+a)return~a || (d.cookie = h + "=; path=/");
-              j = d.createElement(e), k = d.getElementsByTagName(e)[0], j.src = a, b && (j.onload = j.onerror = b), k.parentNode.insertBefore(j, k)
-          }
-
-          function c() {
-              n.api || b(l.shift() || -1, c)
-          }
-
-          if (this.Mobify)return;
-          var d = document, e = "script", f = "mobify", g = "." + f + ".com/", h = f + "-path", i = g + "un" + f + ".js", j, k, l = [!1, 1], m, n = this.Mobify = {points:[+(new Date)], tagVersion:[6, 1]}, o = /((; )|#|&|^)mobify-path=([^&;]*)/g.exec(location.hash + "; " + d.cookie);
-          o ? (m = o[3]) && !+(m = o[2] && sessionStorage[h] || m) && (l = [!0, "//preview" + g + escape(m)]) : (l = a() || l, l[0] && l.push("//cdn" + i, "//files01" + i)), l.shift() ? (d.write('<plaintext style="display:none;">'), setTimeout(c)) : b(l[0])
-      })(function () {
-          if (/ip(hone|od|ad)|android|blackberry.*applewebkit/i.test(navigator.userAgent)) {
-              return[1, "//cdn.mobify.com/sites/syxer/production/mobify.js"]
-          }
-      })
-      /*]]>*/</script>
-  <% end -%>
-  <!-- END MOBIFY -->
-
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title><%= ['南昌思创工程科技有限公司', @sys_title, @title].compact.join(' - ') %></title>
-  <meta name="Description" content="南昌思创工程科技有限公司"/>
+  <title><%= ['南昌思创工程技术有限公司', @sys_title, @title].compact.join(' - ') %></title>
+  <meta name="Description" content="南昌思创工程技术有限公司"/>
   <meta name="Keywords" content=""/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
   <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css"/>
