网站首页修改

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,14 +2,16 @@
 <div class="main_banner">
   <div id="transitionEffect">
     <div class="slide r1">
-      <div class="banner_text"><a href="services.php">See Our Services</a></div>
+      <div class="banner_text"><a href="/spirit.php">“喻平精神”</a></div>
     </div>
     <div class="slide r2">
-      <div class="banner_text"><a href="daybreak.php">Case Study</a></div>
+      <div class="banner_text"><a href="#">青云水厂</a></div>
     </div>
-    <div class="slide r3"></div>
+    <div class="slide r3">
+      <div class="banner_text"><a href="#">牛行水厂中控系统</a></div>
+    </div>
     <div class="slide r4">
-      <div class="banner_text"><a href="services.php">Find what we can do for you</a></div>
+      <div class="banner_text"><a href="#">乐平污水处理厂</a></div>
     </div>
   </div>
 </div>
