--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -19,6 +19,8 @@
                   <img src="/projects/<%= p.index_pic -%>" width="275" height="228" border="0" class="vtip" title="<%= p.name -%>"></a>
               </div>
           <% end -%>
+      <% else -%>
+          暂无数据
       <% end -%>
     </div>
   </div>
