--- a/app/views/main/recruitment.html.erb
+++ b/app/views/main/recruitment.html.erb
@@ -9,7 +9,7 @@
 <div class="content_area">
   <div class="content_mid_area">
     <div class="content_text_area" style="min-height: 280px;">
-      暂无招聘信息
+      暂无数据
     </div>
   </div>
   <div class="content_bottom"></div>
