--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 body {
-    background-image: url("/images/body_bg.jpg");
+    /*background-image: url("/images/body_bg.jpg");*/
     background-repeat: no-repeat;
     margin: 0px;
     padding: 0px;
