--- a/public/stylesheets/banner.css
+++ b/public/stylesheets/banner.css
@@ -1,6 +1,7 @@
 #transitionEffect {
     width: 980px;
-    height: 428px;
+    /*height: 428px;*/
+    height: 308px;
     overflow: hidden;
 }
 .slide {
@@ -45,8 +46,9 @@
 }
 div.fadenav {
     position: absolute;
-    top: 380px;
-    right: 884px;
+    /*top: 380px;*/
+    top: 260px;
+    right: 864px;
 }
 div.fadenav a {
     display: block;
@@ -83,8 +85,8 @@ div.fadenav a.current {
 .banner_text {
     float:left;
     width:260px;
-    margin-left: 34px;
-    margin-top:316px;
+    margin-left: 24px;
+    margin-top:226px;
     font-size:20px;
     text-align:left;
 }
