--- a/app/views/main/about_us.html.erb
+++ b/app/views/main/about_us.html.erb
@@ -1,7 +1,7 @@
 <!--<script type="text/javascript" src="/jquery/js/rotator.js"></script>-->
 <div class="conten_heading">
   <div class="page_heading">
-    我们有不平凡的团队
+    优秀的管理团队、专业的技术力量和完善的售后服务体系
   </div>
   <div class="breadcrumb">
     <a href="index.php">首页</a>&nbsp;/&nbsp;关于我们
@@ -44,7 +44,12 @@
         建筑智能化系统集成与服务是思创工程的主营业务之一。其典型案例有：南昌城投大厦、赣州自然博物馆、南昌大学第二附属医院门诊科技楼、南昌市第十九中学新校区等。
       </p>
 
-
+      <p>
+        思创工程以人为本，富有“敬业、职业、专业”精神的员工是公司最大的财富。敬业精神是一种工作态度，职业精神是一种工作素质，
+        专业精神是一种工作技能。同时，公司致力于引进国外同行业先进的技术成果，是法国施耐德、美国GE、美国AB、美国HACH、德国西门子、
+        德国E+H等多家国际知名公司的合作伙伴。经过十多年的健康发展，优秀的管理团队、专业的技术力量和完善的售后服务体系，保证了公司业务迅速拓展。
+        目前公司注册资金1000万元，年营业额约5000万元，拥有50多名中高级专业技术人才。
+      </p>
 
       <p>
         未来，思创工程将一如既往地以诚为本，以变为道，奉行“更密切、更快捷、更高效、更全面、更专业”的服务理念，继续追求技术创新，提供高水准、全面性、
@@ -70,9 +75,9 @@
         企业资质
       </h3>
       <p>
-        思创工程以人为本，经过十多年的健康发展，优秀的管理团队、专业的技术力量和完善的售后服务体系，保证了公司业务迅速拓展。
-        目前公司注册资金1000万元，年营业额约5000万元，拥有50多名中高级专业技术人才，已取得“<strong>电子工程专业承包</strong>”、
-        “<strong>机电设备安装工程专业承包</strong>”、“<strong>建筑智能化工程专业承包</strong>”、“<strong>环保工程专业承包”以及“计算机信息系统集成</strong>”、
+        思创工程取得了“<strong>电子工程专业承包</strong>”、
+        “<strong>机电设备安装工程专业承包</strong>”、“<strong>建筑智能化工程专业承包</strong>”、
+        “<strong>环保工程专业承包</strong>”以及“<strong>计算机信息系统集成</strong>”、
         “<strong>安全技术防范工程设计、施工</strong>”等多项资质并通过了软件产品及高新企业认证，
         获得“<strong>守合同，重信用AAA</strong>”荣誉称号，成为江西省同行业著名企业。
       </p>
