--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,7 +17,7 @@
 </div>
 <div id="content">
   <h5>
-    始终奉行“实用、可靠、有效益、适度先进”的理念，为客户提供全优的系统解决方案。
+    始终奉行“实用、可靠、有效益、适度先进”的理念，为客户提供一站式的系统解决方案。
   </h5>
 
   <div class="mid_content">
