--- a/app/views/main/spirit.html.erb
+++ b/app/views/main/spirit.html.erb
@@ -1,7 +1,7 @@
 <!--<script type="text/javascript" src="/jquery/js/rotator.js"></script>-->
 <div class="conten_heading">
   <div class="page_heading">
-    发扬“喻平精神”
+    敬业、职业、专业
   </div>
   <div class="breadcrumb">
     <a href="index.php">首页</a>&nbsp;/&nbsp;喻平精神
@@ -10,7 +10,7 @@
 <div class="content_area">
   <div class="content_mid_area">
     <div align="center">
-       <img src="/images/spirit.jpg" width="600" height="376" />
+       <img src="/images/spirit1.jpg" width="600" height="376" />
     </div>
     <div class="culture_text">
       <p>
