--- a/app/views/main/services.html.erb
+++ b/app/views/main/services.html.erb
@@ -21,11 +21,11 @@
 
       <div class="service_box_heading">
         <h3>
-          工业自动化
+          自动控制系统
         </h3>
       </div>
       <div class="service_box_text">
-        工业自动化系统集成是思创工程的传统业务，公司拥有多年的系统集成建设和运行服务经验，能为用户提供全面的产品、服务和相关技术支持。
+        自动控制系统集成与服务是思创工程的传统业务，公司拥有多年的系统集成建设和运行服务经验，能为用户提供全面的产品、服务和相关技术支持。
       </div>
       <div class="service_box_bullet">
         <ul>
@@ -70,7 +70,7 @@
       </div>
       <div class="service_box_heading">
         <h3>
-          运维服务
+          节能及运维服务
         </h3>
       </div>
       <div class="service_box_text">
