--- a/app/views/main/spirit.html.erb
+++ b/app/views/main/spirit.html.erb
@@ -9,17 +9,29 @@
 </div>
 <div class="content_area">
   <div class="content_mid_area">
-    <div align="center">
+    <div align="center" style="margin-top:20px;">
        <img src="/images/spirit1.jpg" width="600" height="376" />
     </div>
-    <div class="culture_text">
+    <div class="culture_text" style="margin-top:10px;">
       <p>
-        南昌思创工程技术有限公司始创于1997年10月，是专业从事自动控制系统集成与服务、建筑智能化系统集成与服务、节能及运维服务的高科技公司。
-        创业十多年来，思创工程不断探索，始终奉行“实用、可靠、有效益、适度先进”的理念，根据项目需求，利用系统集成的方法，将计算机网络技术、
-        通信技术、信息技术与工程项目有机地结合起来，通过对设备的自动监控，对信息资源的管理和对客户的信息服务，实现与工程项目之间的优化组合，
-        为客户提供建设与服务全过程一站式的系统解决方案。
+        敬业精神是一种工作态度，职业精神是一种工作素质， 专业精神是一种工作技能。
       </p>
-
+      <p>
+        没有敬业精神建不成现代化。懒懒散散，工作就没有效率；粗枝大叶，容易造成失误、留下隐患。敬业精神是竞争力的重要基础，却不是竞争力的全部。在科技日新月异、一日千里的今天，
+        我们不仅要敬业，还要专业、职业、敬业，才能从尽职尽责跨越到尽善尽美，才能从优秀跨越到卓越。
+      </p>
+      <p>
+        工作是应该用生命去做的事，每个人都是在为自己而工作。全心全意热爱你的工作把每一件事情都做好，努力工作了，早晚会有回报！
+        我们每个人都要学会管理自己的情绪，做公司需要做的事，让敬业成为习惯。
+      </p>
+      <p>
+        忠诚永远比能力更重要，严格遵守公司规章制度，为公司节约每一分钱，对拥有的一切心怀感恩。公司利益高于一切，面对问题要学会合作与借力，
+        团队精神决定组织成败。
+      </p>
+      <p>
+        成败在于细节，不忽视工作中的每一个细节，要做就做到最好，拒绝浮躁，做事不贪大，做好平凡的细节就不平凡了。员工形象代表着公司形象，
+        我们应该以客户的眼光看待事情，全力维护公司品牌形象，为客户提供最满意的服务。
+      </p>
 
     </div>
   </div>
