--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,7 +93,7 @@
         <% end -%>
       </div>
       <div class="footer_form_text"><span class="footer_text_highlight">给我们留言</span><br/>
-        <a href="mailto:strong@gmail.com">strong@gmail.com</a><br/>
+        <a href="mailto:qiubinfeng@strong.com">qiubinfeng@gmail.com</a><br/>
         P: 0791-8810 3293 | F: 0791-8812 2836
       </div>
     </div>
