导航栏修改

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
 <div class="main_banner">
   <div id="transitionEffect">
     <div class="slide r1" style="background-position: 0 -100px;">
-      <div class="banner_text"><a href="/spirit.php">“喻平精神”</a></div>
+      <div class="banner_text"><a href="/spirit.php">敬业、职业、专业</a></div>
     </div>
     <div class="slide r2">
       <div class="banner_text"><a href="#">青云水厂</a></div>
