--- a/app/views/main/spirit.html.erb
+++ b/app/views/main/spirit.html.erb
@@ -18,7 +18,7 @@
       </p>
       <p>
         没有敬业精神建不成现代化。懒懒散散，工作就没有效率；粗枝大叶，容易造成失误、留下隐患。敬业精神是竞争力的重要基础，却不是竞争力的全部。在科技日新月异、一日千里的今天，
-        我们不仅要敬业，还要专业、职业、敬业，才能从尽职尽责跨越到尽善尽美，才能从优秀跨越到卓越。
+        我们不仅要敬业，还要专业、职业、精业，才能从尽职尽责跨越到尽善尽美，才能从优秀跨越到卓越。
       </p>
       <p>
         工作是应该用生命去做的事，每个人都是在为自己而工作。全心全意热爱你的工作把每一件事情都做好，努力工作了，早晚会有回报！
