--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <meta name="Keywords" content=""/>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
   <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css"/>
+  <link href="/stylesheets/index.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript" src="/jquery/js/jquery.min.js"></script>
   <script type="text/javascript" src="/jquery/js/fade-plugin.js"></script>
+  <script type="text/javascript" src="/jquery/script.js" ></script>
   <script src="/jquery/js/banner.js" type="text/javascript"></script>
   <script src="/jquery/js/jquery.tools.min.js" type="text/javascript"></script>
   <% if params[:action] == "contact" -%>
@@ -34,17 +36,47 @@
       <img src="/images/logo.png" alt="南昌思创工程技术有限公司" width="363" height="55" border="0" title="南昌思创工程技术有限公司"/>
     </a>
   </div>
-  <div class="menu">
-    <ul id="menu">
-      <li id="i1" <%= "class='i1_active'" if params[:action]=="index" -%>><a href="/index.php">首页</a></li>
-      <li id="i2" <%= "class='i2_active'" if params[:action]=="about_us" -%>><a href="/about_us.php">关于我们</a></li>
-      <li id="i3" <%= "class='i3_active'" if params[:action]=="services" -%>><a href="/services.php">公司业务</a></li>
-      <li id="i4" <%= "class='i4_active'" if (params[:action]=="projects" or params[:controller]=="projects") -%>>
-        <a href="/projects.php">成功案例</a></li>
-      <li id="i5" <%= "class='i5_active'" if params[:action]=="recruitment" -%>><a href="/recruitment.php">招贤纳士</a></li>
-      <li id="i6" <%= "class='i6_active'" if params[:action]=="contact" -%>><a href="/contact.php">联系我们</a></li>
+
+  <div class="examples_body">
+    <ul class="topnav">
+      <li><a href="/index.php">首 页</a></li>
+      <li>
+        <a href="/about_us.php">关于我们</a>
+        <ul class="subnav">
+          <li><a href="#">公司简介</a></li>
+          <li><a href="#">组织机构</a></li>
+          <li><a href="#">资质荣誉</a></li>
+          <li><a href="#">公司文化</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="/services.php">主营业务</a>
+        <ul class="subnav">
+          <li><a href="#">自动化</a></li>
+          <li><a href="#">智能化</a></li>
+          <li><a href="#">信息化</a></li>
+          <li><a href="#">节能及维保</a></li>
+        </ul>
+      </li>
+      <li><a href="/projects.php">典型案例</a>
+        <ul class="subnav">
+          <li><a href="#">供水</a></li>
+          <li><a href="#">污水处理</a></li>
+          <li><a href="#">电排站</a></li>
+          <li><a href="#">下穿隧道</a></li>
+          <li><a href="#">工业自控</a></li>
+          <li><a href="#">建筑智能</a></li>
+          <li><a href="#">节能服务</a></li>
+          <li><a href="#">维保服务</a></li>
+        </ul>
+      </li>
+      <li><a href="/recruitment.php">招贤纳士</a></li>
+      <li><a href="/contact.php">联系我们</a></li>
     </ul>
+    <!-- Examples body -->
   </div>
+
+
   <% if params[:action] == "index" -%>
       <%= yield -%>
   <% else -%>
