--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -26,6 +26,43 @@ ul#menu li a {
     outline: none;
     border:none;
 }
+
+/*ul#menu li ul{*/
+    /*padding: 0;*/
+    /*margin-left: 3px;*/
+    /*display: none;*/
+    /*position: absolute;*/
+    /*height: auto;*/
+    /*left: 0;*/
+    /*width: 90px;*/
+    /*border: 1px solid #8AAFCE;*/
+/*}*/
+
+/*ul#menu li ul li{*/
+    /*padding: 0;*/
+    /*margin: 0;*/
+    /*background: none;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*text-align: center;*/
+    /*background-color: white;*/
+/*}*/
+
+/*ul#menu li ul li a{*/
+    /*background: none;*/
+    /*background-color: white;*/
+    /*color: #06A;*/
+    /*height: 100%;*/
+    /*padding: 8px 0 6px 0;*/
+    /*font-size: 14px;*/
+    /*font-weight: normal;*/
+/*}*/
+
+/*ul#menu li ul li a:hover{*/
+    /*background-color: #326697;*/
+    /*color: #FFF;*/
+/*}*/
+
 li#i1 {
     left: 0px;
     width: 68px;
