网站内容修改

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,10 +43,11 @@
       <li>
         <a href="/about_us.php">关于我们</a>
         <ul class="subnav">
-          <li><a href="#">公司简介</a></li>
-          <li><a href="#">组织机构</a></li>
-          <li><a href="#">资质荣誉</a></li>
-          <li><a href="#">公司文化</a></li>
+          <li><a href="/introduction.php">公司简介</a></li>
+          <li><a href="/ceo.php">总经理致辞</a></li>
+          <li><a href="/organization.php">组织机构</a></li>
+          <li><a href="/honor.php">资质荣誉</a></li>
+          <li><a href="/culture.php">公司文化</a></li>
         </ul>
       </li>
       <li>
@@ -134,7 +135,6 @@
         <dd>南昌思创工程技术有限公司 版权所有</dd>
         <dd>Copyright &copy; <%= Time.now.year -%>, Strong Co.ltd, All Rights Reserved</dd>
       </dl>
-
     </div>
   </div>
 </div>
