--- a/app/views/main/introduction.html.erb
+++ b/app/views/main/introduction.html.erb
@@ -10,21 +10,12 @@
 <div class="content_area">
   <div class="content_mid_area">
     <div class="culture_banner">
-      <div id="rotator">
-        <ul>
-          <li class="show" style="opacity: 1;">
-            <img src="/images/culture1.jpg" alt="Our Culture" width="902" height="298"></li>
-          <!--<li style="opacity: 0;" class=""><img src="/images/culture2.jpg" alt="Our Culture" width="902" height="298">-->
-          <!--</li>-->
-          <!--<li style="opacity: 0;" class=""><img src="/images/culture3.jpg" alt="Our Culture" width="902" height="298">-->
-          <!--</li>-->
-          <!--<li style="opacity: 0;" class=""><img src="/images/culture4.jpg" alt="Our Culture" width="902" height="298">-->
-          <!--</li>-->
-        </ul>
-      </div>
+      <img src="/images/culture.jpg" alt="Our Culture" width="902" height="238">
     </div>
-    <div class="culture_text">
-      <h3 style="top: -2px; left: -2px; font-size: 22px;">
+
+    <%= render :partial => "left_menu" -%>
+    <div id="box_right">
+      <h3 style="top: -2px; left: -2px; font-size: 14px;border-bottom: 1px solid #DBDBDB;">
         公司简介
       </h3>
 
@@ -56,31 +47,6 @@
         专业化的服务，致力于将公司打造成立足江西，辐射周边，面向全国的行业翘楚。
       </p>
 
-      <h3 style="top: -2px; left: -2px; font-size: 22px;">
-        企业文化
-      </h3>
-
-      <strong style="margin-top: 10px;display: block;">思创的使命</strong>
-
-      <p>为客户提供满意的解决方案;为员工构造持续的成长平台;为社会承担应尽的责任</p>
-      <strong>价值观</strong><br/>
-      <ul>
-        <li>守信</li>
-        <li>务实</li>
-        <li>创新</li>
-        <li>求精</li>
-      </ul>
-
-      <h3 style="top: -2px; left: -2px; font-size: 22px;">
-        企业资质
-      </h3>
-      <p>
-        思创工程取得了“<strong>电子工程专业承包</strong>”、
-        “<strong>机电设备安装工程专业承包</strong>”、“<strong>建筑智能化工程专业承包</strong>”、
-        “<strong>环保工程专业承包</strong>”以及“<strong>计算机信息系统集成</strong>”、
-        “<strong>安全技术防范工程设计、施工</strong>”等多项资质并通过了软件产品及高新企业认证，
-        获得“<strong>守合同，重信用AAA</strong>”荣誉称号，成为江西省同行业著名企业。
-      </p>
       <br/>
     </div>
   </div>
