友情链接修改

--- a/app/views/common/_friend_links.erb
+++ b/app/views/common/_friend_links.erb
@@ -7,28 +7,17 @@
     <table cellpadding="0" cellspacing="0" border="0">
       <tr>
         <td id="colee_left1" valign="top" align="center" height="60">
-          <table cellpadding="2" cellspacing="0" border="0">
+          <table cellpadding="2" cellspacing="0" border="0" id="friend_links_table">
             <tr align="center">
               <td>
-                <p style="width:142px;height: 60px;margin:5px 2px 0;"><a target="_blank" href="http://www.schneider-electric.com">
+                <p style="width:162px;height: 60px;margin:5px 2px 0;padding: 0;"><a target="_blank" href="http://www.schneider-electric.com">
                   <img border="0" src="/images/friend_links/se_logo.gif"/></a></p>
               </td>
               <td>
-                <p style="width:142px;height: 60px;margin:5px 2px 0;"><a target="_blank" href="http://www.instrument.com.cn">
+                <p style="width:162px;height: 60px;margin:5px 2px 0;padding: 0;"><a target="_blank" href="http://www.instrument.com.cn">
                   <img border="0" src="/images/friend_links/SH_logo.jpg"/></a></p>
               </td>
-              <td>
-                <p style="width:142px;height: 60px;margin:5px 2px 0;"><a target="_blank" href="http://www.qkgd.com/">
-                  <img border="0" src="http://www.archcy.com/2012/ad_images/qkgd.jpg" alt='qkgd'/></a></p>
-              </td>
-              <td>
-                <p style="width:142px;height: 60px;margin:5px 2px 0;"><a target="_blank" href="http://www.get-design.cn/">
-                  <img border="0" src="http://www.archcy.com/resource2011/images/dejiemeng.jpg" alt='德杰盟'/></a></p>
-              </td>
-              <td>
-                <p style="width:142px;height: 60px;margin:5px 2px 0;"><a target="_blank" href="http://www.infinity.com.cn ">
-                  <img border="0" src="http://www.archcy.com/2012/ad_images/jinbi.jpg"/></a></p>
-              </td>
+
             </tr>
           </table>
         </td>
