--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -894,3 +894,8 @@ li.menu-none a.visited{
     font-size: 12px;
     text-decoration: none;
 }
+
+#friend_links_table img{
+    width:142px;
+    height: 60px;
+}
