公司资质修改

--- a/app/views/main/honor.html.erb
+++ b/app/views/main/honor.html.erb
@@ -21,13 +21,17 @@
 
       <div style="line-height: 26px;font-size: 12px;margin-top: 5px;">
         卓越的技术、贴心的服务、丰富的经验带来业内的高度认可及众多资质认证
-        · 建筑智能化工程设计与施工一级<br/>
-        · 机电设备安装工程专业承包<br/>
-        · 建筑智能化工程专业承包<br/>
-        · 环保工程专业承包<br/>
-        · 计算机信息系统集成<br/>
-        · 安全技术防范工程设计、施工<br/>
+        · 电子工程专业承包资质<br/>
+        · 建筑智能化工程专业承包资质<br/>
+        · 机电设备专业承包资质<br/>
+        · 环保工程专业承包资质<br/>
+        · 安全技术防范工程设计、施工资格证<br/>
+        · 计算机信息系统集成资质<br/>
+        · ISO9001:2004环境管理体系认证<br/>
+        · ISO9001:2008质量管理体系认证<br/>
+        · ISO9001:2001职业健康管理体系认证<br/>
         · 守合同，重信用AAA<br/>
+        · 高新企业<br/>
         ...
       </div>
 
