--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     <ul class="topnav">
       <li><a href="/index.php">首 页</a></li>
       <li>
-        <a href="/about_us.php">关于我们</a>
+        <a href="/introduction.php">关于我们</a>
         <ul class="subnav">
           <li><a href="/introduction.php">公司简介</a></li>
           <li><a href="/ceo.php">总经理致辞</a></li>
