--- a/app/views/main/about_us.html.erb
+++ b/app/views/main/about_us.html.erb
@@ -10,18 +10,7 @@
 <div class="content_area">
   <div class="content_mid_area">
     <div class="culture_banner">
-      <div id="rotator">
-        <ul>
-          <li class="show" style="opacity: 1;">
-            <img src="/images/culture1.jpg" alt="Our Culture" width="902" height="298"></li>
-          <!--<li style="opacity: 0;" class=""><img src="/images/culture2.jpg" alt="Our Culture" width="902" height="298">-->
-          <!--</li>-->
-          <!--<li style="opacity: 0;" class=""><img src="/images/culture3.jpg" alt="Our Culture" width="902" height="298">-->
-          <!--</li>-->
-          <!--<li style="opacity: 0;" class=""><img src="/images/culture4.jpg" alt="Our Culture" width="902" height="298">-->
-          <!--</li>-->
-        </ul>
-      </div>
+      <img src="/images/culture.jpg" alt="Our Culture" width="902" height="238">
     </div>
     <div class="culture_text">
       <h3 style="top: -2px; left: -2px; font-size: 22px;">
