--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,17 +1,17 @@
 <script type="text/javascript" src="/jquery/js/validation2.js"></script>
 <div class="main_banner">
   <div id="transitionEffect">
-    <div class="slide r1" style="background-position: 0 -100px;">
+    <div class="slide r1">
       <div class="banner_text"><a href="/spirit.php">敬业、职业、专业</a></div>
     </div>
     <div class="slide r2">
-      <div class="banner_text"><a href="#">青云水厂</a></div>
+      <div class="banner_text"><a href="#">绿色 低碳 环保</a></div>
     </div>
     <div class="slide r3">
-      <div class="banner_text"><a href="#">牛行水厂中控系统</a></div>
+      <div class="banner_text"><a href="#">自动化 智能化 信息化</a></div>
     </div>
     <div class="slide r4">
-      <div class="banner_text"><a href="#">乐平污水处理厂</a></div>
+      <div class="banner_text"></div>
     </div>
   </div>
 </div>
@@ -42,4 +42,4 @@
   </div>
 </div>
 
-<%= render :partial => "/common/friend_links" -%>
+<%#= render :partial => "/common/friend_links" -%>
