--- a/app/views/main/spirit.html.erb
+++ b/app/views/main/spirit.html.erb
@@ -4,13 +4,14 @@
     敬业、职业、专业
   </div>
   <div class="breadcrumb">
-    <a href="index.php">首页</a>&nbsp;/&nbsp;喻平精神
+    <a href="index.php">首页</a>&nbsp;/&nbsp;思创精神
   </div>
 </div>
 <div class="content_area">
   <div class="content_mid_area">
     <div align="center" style="margin-top:20px;">
-       <img src="/images/spirit1.jpg" width="600" height="376" />
+       <!--<img src="/images/spirit1.jpg" width="600" height="376" />-->
+       <img src="/images/group.jpg" width="700" height="400" />
     </div>
     <div class="culture_text" style="margin-top:10px;">
       <p>
