--- a/app/views/admin_main/index.html.erb
+++ b/app/views/admin_main/index.html.erb
@@ -6,7 +6,8 @@
 
 <h1 class="title">管理</h1>
 <%= link_to "车辆列表", {:controller => "cars", :action => "list"} %>&nbsp;&nbsp;
-<%= link_to "留言列表", {:controller => "messages", :action => "list"} %>
+<%= link_to "留言列表", {:controller => "messages", :action => "list"} %>&nbsp;&nbsp;
+<%= link_to "业务分类列表", {:controller => "category", :action => "list"} %>&nbsp;&nbsp;
 
 
 
