--- a/app/views/main/culture.html.erb
+++ b/app/views/main/culture.html.erb
@@ -18,17 +18,29 @@
       <h3 style="top: -2px; left: -2px; font-size: 14px;border-bottom: 1px solid #DBDBDB;">
         企业文化
       </h3>
-      <strong style="margin-top: 10px;display: block;">思创的使命</strong>
+      <strong style="margin-top: 10px;display: block;">企业精神</strong>
+      <p>敬业&nbsp;&nbsp;&nbsp;&nbsp;职业&nbsp;&nbsp;&nbsp;&nbsp;专业</p>
 
-      <p>为客户提供满意的解决方案;为员工构造持续的成长平台;为社会承担应尽的责任</p>
+      <strong>服务理念</strong><br/>
+      <p>更密切&nbsp;&nbsp;&nbsp;&nbsp;更快捷&nbsp;&nbsp;&nbsp;&nbsp;更高效&nbsp;&nbsp;&nbsp;&nbsp;更全面&nbsp;&nbsp;&nbsp;&nbsp;更专业</p>
+
+      <strong>服务要求</strong><br/>
+      <p>高水准&nbsp;&nbsp;&nbsp;&nbsp;全面性&nbsp;&nbsp;&nbsp;&nbsp;专业化</p>
+
+      <strong>使命</strong>
+
+      <p>为客户提供满意的解决方案</p>
+      <p>为员工构造健康的成长平台</p>
+      <p>为社会承担应尽的责任</p>
       <strong>价值观</strong><br/>
-      <ul>
-        <li>守信</li>
-        <li>务实</li>
-        <li>创新</li>
-        <li>求精</li>
-      </ul>
-
+      <p>守信&nbsp;&nbsp;&nbsp;&nbsp;务实&nbsp;&nbsp;&nbsp;&nbsp;创新&nbsp;&nbsp;&nbsp;&nbsp;求精</p>
+      <strong>职业意识</strong><br/>
+      <p>质量&nbsp;&nbsp;&nbsp;&nbsp;服务&nbsp;&nbsp;&nbsp;&nbsp;协作&nbsp;&nbsp;&nbsp;&nbsp;学习
+        &nbsp;&nbsp;&nbsp;&nbsp;竞争&nbsp;&nbsp;&nbsp;&nbsp;危机&nbsp;&nbsp;&nbsp;&nbsp;敬业&nbsp;&nbsp;&nbsp;&nbsp;整体</p>
+      <strong>工作态度</strong><br/>
+      <p>礼貌&nbsp;&nbsp;&nbsp;&nbsp;服从&nbsp;&nbsp;&nbsp;&nbsp;尽职&nbsp;&nbsp;&nbsp;&nbsp;诚实
+        &nbsp;&nbsp;&nbsp;&nbsp;协作&nbsp;&nbsp;&nbsp;&nbsp;勤俭&nbsp;&nbsp;&nbsp;&nbsp;保密&nbsp;&nbsp;&nbsp;&nbsp;守时
+      &nbsp;&nbsp;&nbsp;&nbsp;自省&nbsp;&nbsp;&nbsp;&nbsp;总结</p>
       <br/>
     </div>
 
