--- a/app/views/main/honor.html.erb
+++ b/app/views/main/honor.html.erb
@@ -20,7 +20,7 @@
       </h3>
 
       <div style="line-height: 26px;font-size: 12px;margin-top: 5px;">
-        卓越的技术、贴心的服务、丰富的经验带来业内的高度认可及众多资质认证
+        卓越的技术、贴心的服务、丰富的经验带来业内的高度认可及众多资质认证<br/>
         · 电子工程专业承包资质<br/>
         · 建筑智能化工程专业承包资质<br/>
         · 机电设备专业承包资质<br/>
