--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,27 +2,27 @@
 <div class="main_banner">
   <div id="transitionEffect">
     <div class="slide r1">
-      <div class="banner_text"><a href="/spirit.php">敬业、职业、专业</a></div>
+      <div class="banner_text" style="margin-top: 25px;"><a href="/spirit.php" style="color:black;">敬业&nbsp;&nbsp;职业&nbsp;&nbsp;专业</a></div>
     </div>
     <div class="slide r2">
-      <div class="banner_text"><a href="#">绿色 低碳 环保</a></div>
+      <div class="banner_text"><a href="#">绿色&nbsp;&nbsp;低碳&nbsp;&nbsp;环保</a></div>
     </div>
     <div class="slide r3">
-      <div class="banner_text"><a href="#">自动化 智能化 信息化</a></div>
+      <div class="banner_text"><a href="#">自动化&nbsp;&nbsp;智能化&nbsp;&nbsp;信息化</a></div>
     </div>
     <div class="slide r4">
-      <div class="banner_text"></div>
+      <div class="banner_text" style="margin-top: 40px;"><a href="#">高水准&nbsp;&nbsp;全面性&nbsp;&nbsp;专业化</a></div>
     </div>
   </div>
 </div>
 <div id="content">
   <h5>
-    始终奉行“实用、可靠、有效益、适度先进”的理念，为客户提供一站式的系统解决方案。
+    始终奉行“实用、可靠、有效益、适度先进”的原则，为客户提供一站式的系统解决方案。
   </h5>
 
   <div class="mid_content">
     <div class="gossips_area">思创工程是专业从事自动控制系统集成与服务、建筑智能化系统集成与服务、节能及运维服务的高科技公司。<br/>
-      <a href="/about_us.php" target="_blank">详细 ›</a></div>
+      <a href="/introduction.php" target="_blank">详细 ›</a></div>
     <div class="news_box">
       <font style="color:black;">成功案例</font><br/>
       <% unless @projects.blank? -%>
