--- a/app/views/main/services.html.erb
+++ b/app/views/main/services.html.erb
@@ -1,6 +1,11 @@
+<style>
+  .btn_action a{
+      color: #005793;
+  }
+</style>
 <div class="conten_heading">
   <div class="page_heading">
-    我们的服务触及每一个行业及其业务流程
+    我们的服务触及众多行业及其业务流程
   </div>
   <div class="breadcrumb">
     <a href="index.php">首页</a>&nbsp;/&nbsp;公司业务
@@ -21,7 +26,7 @@
 
       <div class="service_box_heading">
         <h3>
-          自动控制系统
+          自动化
         </h3>
       </div>
       <div class="service_box_text">
@@ -37,12 +42,12 @@
           <li>完善的售后服务</li>
         </ul>
         <div class="btn_action">
-          <a href="projects.php"><img src="/images/btn_action.gif" alt="See it in Action" width="101" height="10" border="0"></a>
+          <a href="projects.php">查看详细案例 >></a>
         </div>
       </div>
       <div class="service_box_heading">
         <h3>
-          建筑智能化
+          智能化
         </h3>
       </div>
       <div class="service_box_text">
@@ -65,7 +70,35 @@
           <li>完善的售后服务</li>
         </ul>
         <div class="btn_action">
-          <a href="projects.php"><img src="/images/btn_action.gif" alt="See it in Action" width="101" height="10" border="0"></a>
+          <a href="projects.php">查看详细案例 >></a>
+        </div>
+      </div>
+      <div class="service_box_heading">
+        <h3>
+          信息化
+        </h3>
+      </div>
+      <div class="service_box_text">
+        思创工程利用系统集成的方法，将计算机网络技术、通信技术、信息技术与建筑工程有机地结合起来，通过对设备的自动监控、
+        对信息资源的管理和对用户的信息服务，实现与建筑工程之间的优化组合，帮助用户建设先进、高效、多功能、多用途的并能实现信息共享、
+        统一管理和绿色环保的现代化建筑而为用户提供全方位的建筑智能化系统集成解决方案。
+      </div>
+      <div class="service_box_bullet">
+        <ul>
+          <li>提供完善的解决方案<br>
+          </li>
+          <li>与国际品牌公司合作<br>
+          </li>
+          <li>最优化设计<br>
+          </li>
+          <li>保证工程质量<br>
+          </li>
+          <li>节能绿色环保<br>
+          </li>
+          <li>完善的售后服务</li>
+        </ul>
+        <div class="btn_action">
+          <a href="projects.php">查看详细案例 >></a>
         </div>
       </div>
       <div class="service_box_heading">
@@ -88,7 +121,7 @@
           </li>
         </ul>
         <div class="btn_action">
-          <a href="projects.php"><img src="/images/btn_action.gif" alt="See it in Action" width="101" height="10" border="0"></a>
+          <a href="projects.php">查看详细案例 >></a>
         </div>
       </div>
     </div>
