--- a/app/views/main/introduction.html.erb
+++ b/app/views/main/introduction.html.erb
@@ -20,31 +20,35 @@
       </h3>
 
       <p>
-        南昌思创工程技术有限公司始创于1997年10月，是专业从事自动控制系统集成与服务、建筑智能化系统集成与服务、节能及运维服务的高科技公司。
-        创业十多年来，思创工程不断探索，始终奉行“实用、可靠、有效益、适度先进”的理念，根据项目需求，利用系统集成的方法，将计算机网络技术、
-        通信技术、信息技术与工程项目有机地结合起来，通过对设备的自动监控，对信息资源的管理和对客户的信息服务，实现与工程项目之间的优化组合，
-        为客户提供建设与服务全过程一站式的系统解决方案。
+        南昌思创工程技术有限公司始创于1997年10月，是专业从事自动控制系统集成与服务、建筑智能化系统集成与服务、企业信息化系统集成与服务、节能及运维服务的高科技公司。
       </p>
 
       <p>
-        自动控制系统集成与服务是思创工程的传统优势主营业务。其业绩遍及市政领域中的供水、污水处理、电排站、下穿隧道及工业领域中的冶金、
-        有色、化工、纺织等行业的自动控制项目。其中，公司在市政领域中的供水、污水处理、电排站、下穿隧道等行业的自控项目拥有绝对的领先优势。
+        创业十多年来，思创工程不断探索，始终本着“实用、可靠、有效益、适度先进”的原则，以多技术融合为核心，根据项目实际需求，将先进的电气控制技术、
+        自动化技术、智能化技术、信息化技术及计算机网络技术与项目有机地结合起来，经过二次优化设计、设备采购成套、系统集成、软件开发、工程管理、
+        现场安装调试、竣工开车、技术培训、售后等全程服务，通过对设备的自动监控，对信息资源的智能管理和对客户的信息服务，实现与项目之间的优化组合，
+        为客户提供建设与服务全过程一站式的解决方案。
       </p>
 
       <p>
-        建筑智能化系统集成与服务是思创工程的主营业务之一。其典型案例有：南昌城投大厦、赣州自然博物馆、南昌大学第二附属医院门诊科技楼、南昌市第十九中学新校区等。
+        思创工程以人为本，重视员工的职业素养培养，认为富有“敬业、职业、专业”精神的员工是公司最大的财富。敬业精神是一种工作态度，职业精神是一种工作素质，
+        专业精神是一种工作技能。公司已拥有50多名中高级专业技术人才，大多获得“系统集成项目经理”、“机电工程建造师”等多项国家执业资格证书。
       </p>
 
       <p>
-        思创工程以人为本，富有“敬业、职业、专业”精神的员工是公司最大的财富。敬业精神是一种工作态度，职业精神是一种工作素质，
-        专业精神是一种工作技能。同时，公司致力于引进国外同行业先进的技术成果，是法国施耐德、美国GE、美国AB、美国HACH、德国西门子、
-        德国E+H等多家国际知名公司的合作伙伴。经过十多年的健康发展，优秀的管理团队、专业的技术力量和完善的售后服务体系，保证了公司业务迅速拓展。
-        目前公司注册资金1000万元，年营业额约5000万元，拥有50多名中高级专业技术人才。
+        思创工程坚持全面型、工程化建设的发展理念，注重企业平台建设，已取得“电子工程专业承包”、“机电设备安装工程专业承包”、“建筑智能化工程专业承包”、
+        “环保工程专业承包”以及“计算机信息系统集成”、“安全技术防范工程设计、施工”等多项资质，获得“守合同，重信用AAA”荣誉称号，
+        并一举通过了国家发改委组织的 “节能服务公司”资质认定。
       </p>
 
       <p>
-        未来，思创工程将一如既往地以诚为本，以变为道，奉行“更密切、更快捷、更高效、更全面、更专业”的服务理念，继续追求技术创新，提供高水准、全面性、
-        专业化的服务，致力于将公司打造成立足江西，辐射周边，面向全国的行业翘楚。
+        经过十余年的健康发展，优秀的管理团队、专业的技术力量和完善的售后服务体系，保证了公司业务的迅速拓展。公司业务范围已涵盖自来水、
+        污水、水利、环保、有色、冶金、化工、城市交通、智能建筑等多个行业。目前公司注册资金1000万元，年营业额约8000万元，已成为省内自控行业的领军企业。
+      </p>
+
+      <p>
+        未来，思创工程将一如既往地以诚为本，以变为道，奉行“更密切、更快捷、更高效、更全面、更专业”的服务理念，继续追求技术创新，
+        为客户提供高水准、全面性、专业化的服务为己任，致力于将公司打造成立足江西，辐射周边，面向全国的行业翘楚。
       </p>
 
       <br/>
