--- a/public/stylesheets/banner.css
+++ b/public/stylesheets/banner.css
@@ -82,15 +82,16 @@ div.fadenav a.current {
     border:none;
 }
 .banner_text {
-    float:left;
+    float:right;
     width:260px;
-    margin-left: 24px;
-    margin-top:226px;
+    /*margin-right: 24px;*/
+    margin-top:50px;
     font-size:20px;
     text-align:left;
 }
 .banner_text a {
-    color:#FFFFFF;
+    /*color:#FFFFFF;*/
+    color: #000000;
     text-decoration:none;
 }
 .banner_text a:hover {
